--- a/projects/flat-in-pechantikov/index.mdx
+++ b/projects/flat-in-pechantikov/index.mdx
@@ -3,5 +3,6 @@ title: "Квартира в Печатниковом переулке"
 photo: "Василий Буланов"
 thumb: "./thumb.jpg"
 scheme: "./scheme.jpg"
+order: 10002
 ---
 Квартира в самом центре Москвы, в старом доходном доме для пожилой пары. 
