--- a/projects/flat-in-rasskazovo-tropiky/index.mdx
+++ b/projects/flat-in-rasskazovo-tropiky/index.mdx
@@ -3,6 +3,7 @@ title: "Квартира в ЖК Рассказово с элементами т
 thumb: "./thumb.jpg"
 scheme: "./scheme.jpg"
 print: "https://www.ivd.ru/dizajn-i-dekor/kvartira/sochnaya-eklektika-kvartira-v-novoj-moskve-50571"
+order: 200
 ---
 Квартиар в ЖК Рассказово для семьи с двумя детьми. Хозяева часто путешествуют в тропические страны, поэтому им хотелось в оформление новой квартиры внести тропические нотки.
 Фотограф: Василий Буланов
