--- a/projects/flat-in-sokolnikah/index.mdx
+++ b/projects/flat-in-sokolnikah/index.mdx
@@ -5,5 +5,6 @@ photo: "Шангина Ольга"
 thumb: "./thumb.jpg"
 scheme: "./scheme.jpg"
 print: "https://www.houzz.ru/statyi/do-i-posle-kvartira-v-stalinke-gde-krugom-zerkala-stsetivw-vs~115222377"
+order: 100
 ---
 Ремонт в квартире был сделан предыдущими хозяевами в 2000 году и требовал глобальных изменений. К тому же, оказалось, что узаконенная 18 лет назад планировка на сегодняшний день совершенна не законна и если понадобится передвинуть хотя бы одну стену, то это уже невозможно будет согласовать. Поэтому задача стояла достаточно сложной: при условии сохранения газовой плиты, сохранить максимально большие объемы помещений и сделать планировку, которую возможно будет узаконить.
