--- a/projects/flat-on-bolshoy-karetny/index.mdx
+++ b/projects/flat-on-bolshoy-karetny/index.mdx
@@ -5,6 +5,7 @@ photo: "Антон Лихтарович"
 thumb: "./thumb.jpg"
 scheme: "./scheme.jpg"
 print: "https://www.ivd.ru/dizajn-i-dekor/kvartira/kvartira-v-starom-fonde-s-belymi-stenami-i-yarkoj-mebelyu-72721"
+order: 700
 ---
 Квартира в самом центре Москвы в старом фонде для семьи с одним ребенком.
 Хозяйка квартиры хотела поучить светлый и спокойный интерьер с яркими акцентами и легкими классическими элементами. В течении всей работы мы балансировали между классикой и современностью. У хозяйки была собрана достаточно большая коллекция антикварной посуды, картин и книг. Все это раньше хранилось в коробках, потому что прежние квартиры были небольшими. Мы предусмотрели большое количество остекленных и открытых полок, чтобы каждая ценная вещь смогла найти своё место.
