--- a/projects/a-little-loft/index.mdx
+++ b/projects/a-little-loft/index.mdx
@@ -4,5 +4,6 @@ photo: "Василий Буланов"
 thumb: "./thumb.jpg"
 scheme: "./scheme.png"
 print: "https://www.houzz.ru/statyi/do-i-posle-preobrazhenie-dvushki-v-dome-epohi-brezhneva-stsetivw-vs~102709423"
+order: 10005
 ---
 Из небольшой квартиры в брежневском доме мы сделали современное и уютное жилье для мамы с дочкой. В интерьер мы внесли легкие лофтовые нотки.
