--- a/projects/big-family-flat/index.mdx
+++ b/projects/big-family-flat/index.mdx
@@ -4,5 +4,6 @@ stylist: "Рябова Ольга"
 photo: "Шангина Ольга"
 thumb: "./thumb.jpg"
 scheme: "./scheme.jpg"
+order: 1000
 ---
 Квартира в новом ЖК для большой семьи.  Изначально заказчики купили однокомнатную квартиру как инвестицию. Hо, пока планировали в ней ремонт, решили приобрести соседнюю жилплощадь, объединить их и переехать всей семьёй.
