--- a/projects/flat-in-grinada/index.mdx
+++ b/projects/flat-in-grinada/index.mdx
@@ -5,5 +5,6 @@ photo: "Шангина Ольга"
 thumb: "./thumb.jpg"
 scheme: "./scheme.jpg"
 print: "https://www.ivd.ru/dizajn-i-dekor/kvartira/zelenaya-spalnya-golubaya-detskaya-i-malinovyj-sanuzel-kvartira-v-moskve-v-kotoroj-mnogo-cveta-63461"
+order: 700
 ---
 Заказчики- молодая семья с маленьким ребенком. Квартиру в ЖК Гринада хозяева выбрали из-за близости леса и удобно транспортной доступности. Интерьер хотели получить яркий и индивидуальный.
