--- a/projects/flat-in-himky/index.mdx
+++ b/projects/flat-in-himky/index.mdx
@@ -4,5 +4,6 @@ photo: "Василий Буланов"
 thumb: "./thumb.jpg"
 scheme: "./scheme.jpg"
 print: "https://www.houzz.ru/statyi/houzz-tur-iz-odnushki-dvushka-s-dvumya-garderobnymi-stsetivw-vs~119320486"
+order: 10003
 ---
 Из однокомнатной квартиры мы сделали для хозяйки уютную двухкомнатную квартиру, с большим количеством мест для хранения.
