fix scheme file

--- a/projects/a-little-loft/index.mdx
+++ b/projects/a-little-loft/index.mdx
@@ -2,7 +2,7 @@
 title: "Совсем немного лофт"
 photo: "Василий Буланов"
 thumb: "./thumb.jpg"
-scheme: "./scheme.png"
+scheme: "./scheme.jpg"
 print: "https://www.houzz.ru/statyi/do-i-posle-preobrazhenie-dvushki-v-dome-epohi-brezhneva-stsetivw-vs~102709423"
 order: 10005
 ---
