feat: update project

--- a/projects/a-little-loft/index.mdx
+++ b/projects/a-little-loft/index.mdx
@@ -4,6 +4,7 @@ photo: "Василий Буланов"
 thumb: "./thumb.jpg"
 scheme: "./scheme.jpg"
 print: "https://www.houzz.ru/statyi/do-i-posle-preobrazhenie-dvushki-v-dome-epohi-brezhneva-stsetivw-vs~102709423"
-order: 01
+order: 1800
+size: 49.1
 ---
 Из небольшой квартиры в брежневском доме мы сделали современное и уютное жилье для мамы с дочкой. В интерьер мы внесли легкие лофтовые нотки.
