feat: update project

--- a/projects/flat-in-cheromusky/index.mdx
+++ b/projects/flat-in-cheromusky/index.mdx
@@ -5,7 +5,8 @@ photo: "Шангина Ольга"
 thumb: "./thumb.jpg"
 scheme: "./scheme.jpg"
 print: "https://www.houzz.ru/statyi/do-i-posle-iz-treshki-i-odnushki-p44t-bolyshaya-kvartira-dlya-semyi-stsetivw-vs~135948714"
-order: 500
+size: 124.1
+order: 1500
 ---
 Хозяевам принадлежала трехкомнатная квартира в панельном доме П-44Т, но когда дети выросли встал вопрос, что им нужны отдельные комнаты. В тот момент, когда заказчики задумались о покупке новой квартиры, на  продажу выставили соседнюю однокомнатную квартиру. Соединив две квартиры у нас получилось сделать удобное, просторное и современное жилье в типовом доме.
 
