feat: update project

--- a/projects/flat-in-odintsovo/index.mdx
+++ b/projects/flat-in-odintsovo/index.mdx
@@ -4,6 +4,7 @@ stylist: "Рябова Ольга"
 photo: "Шангина Ольга"
 thumb: "./thumb.jpg"
 scheme: "./scheme.jpg"
-order: 900
+size: 87.3
+order: 600
 ---
 Из стандартной квартиры для переселенцев с муниципальным ремонтом нам удалось сделать уютное, комфортное и современное жилье для семьи с двумя детьми-подростками. Особых пожеланий у хозяев не было. Им нужно было обустроить квартиру так, чтобы всем было удобно и чтобы все вещи нашли свое место. Стиль интерьера – смешанный. Мы балансировали между классикой и лофтом. Это очень частый запрос, когда в квартире будет жить семья с детьми-подростками.
