feat: update project

--- a/projects/flat-in-pechantikov/index.mdx
+++ b/projects/flat-in-pechantikov/index.mdx
@@ -3,6 +3,7 @@ title: "Квартира в Печатниковом переулке"
 photo: "Василий Буланов"
 thumb: "./thumb.jpg"
 scheme: "./scheme.jpg"
-order: 10002
+order: 1700
+size: 69.0
 ---
 Квартира в самом центре Москвы, в старом доходном доме для пожилой пары. 
