feat: update project

--- a/projects/flat-in-presniay-city/index.mdx
+++ b/projects/flat-in-presniay-city/index.mdx
@@ -4,6 +4,7 @@ stylist: "Полина Рожкова, Яна Яхина"
 photo: "Шангина Ольга"
 thumb: "./thumb.jpg"
 scheme: "./scheme.jpg"
-order: 600
+size: 69.0
+order: 1100
 ---
 Квартира в современном ЖК Пресня Сити для семьи с ребенком-подростком. Родители приобрели эту квартиру для дочери, но пока она не закончила школу, будут жить все вместе. Квартира совсем небольшая, но на 69 метрах мы смогли разместить все необходимое для комфортной жизни всей семьи.
