--- a/projects/flat-in-rasscazovo-skandy/index.mdx
+++ b/projects/flat-in-rasscazovo-skandy/index.mdx
@@ -1,9 +1,10 @@
 ---
-title: "Квартира в ЖК Рассказово с элементами тропиков"
+title: "Квартира в ЖК Рассказово в скандинавском стиле"
 thumb: "./thumb.jpg"
 scheme: "./scheme.jpg"
+size: 100.8
 print: "https://www.ivd.ru/dizajn-i-dekor/kvartira/sochnaya-eklektika-kvartira-v-novoj-moskve-50571"
-order: 300
+order: 1200
 ---
 Квартиар в ЖК Рассказово для семьи с двумя детьми. Хозяева часто путешествуют в тропические страны, поэтому им хотелось в оформление новой квартиры внести тропические нотки.
 Фотограф: Василий Буланов
