feat: update project

--- a/projects/flat-on-strastnoy/index.mdx
+++ b/projects/flat-on-strastnoy/index.mdx
@@ -5,6 +5,7 @@ photo: "Шангина Ольга"
 thumb: "./thumb.jpg"
 scheme: "./scheme.jpg"
 print: "https://www.houzz.ru/statyi/do-i-posle-kvartira-kotoroy-vernuli-istoricheskuyu-planirovku-stsetivw-vs~154865969"
-order: 10001
+order: 800
+size: 60.4
 ---
 Квартира под сдачу на Страстном бульваре. Предыдущий ремонт был сделан 20 лет назад, тогда мало кто узаконивал планировку и строили все, что хотели. Кухня была перенесена в противоположный угол на жилую комнату, а на месте кухни была организованна ванная. В таком виде планировку согласовать сейчас невозможно, согласовать новую, которую желала заказчица нам не удалось, поэтому мы приняли решение в точности восстановить план БТИ 50х годов. 
